# FH-Pacman-KI

./: .gitignore  PacmanAgent.py  pyproject.toml  student_workspace
P2/: BaumTest.ipynb  Knoten.py
P3/: Knoten.py  Suche.ipynb  Suche.py
P_final/: bfs_distanzen.py  evaluation.py  wertekarte.py
private/Backend/session_controller/: GameSession.py  SessionManager.py  websocket_handler.py
src/Backend/: P2  P3  P_final  PacmanAgent.py  frontend_connection.py
src/Backend/Student_Files/: PacmanAgent.py
src/Backend/Student_Files/P2/: BaumTest.ipynb  Knoten.py
src/Backend/Student_Files/P3/: Knoten.ipynb  Knoten.py  Suche.ipynb  Suche.py
