[project]
name = "sose-ki-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "gymnasium==1.2.3",
    "jupyterlab==4.5.6",
    "jupyterlab-lsp==5.3.0",
    "numpy==2.4.4",
    "pillow==12.2.0",
    "python-lsp-server==1.14.0",
    "uvicorn==0.44.0",
    "websocket-client==1.9.0",
    "websockets==16.0",
    # JupyterLab dependencies
    "ipython==8.28.0",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.5",
    "variable-inspector",
    "jupyterlab-git>=0.51.2",
    "lckr-jupyterlab-variableinspector>=3.2.4",
    "python-lsp-server[all]>=1.13.1",
    "jupyterlab-lsp>=5.2.0",
    "game-core==2.0.6",
]
